This is just to motivate myself to improve a little bit every day :)

Best: 14

06-04-2024
Streak: 14
Learned:
Did:
    -Update notes on how to improve adaptive ui - for future reference, don't want to work on it
        anymore right now.

05-04-2024
Streak: 13
Learned:
Did:
    -Failed to make AdaptiveColumn respect Modifier.weight (to be set either within a ColumnScope
        or RowScope context)

04-04-2024
Streak: 12
Learned:
    -Read about adaptive layouts (I really should be storing screen size type,
        but am starting smaller)
Did:
    -Start implementing an 'AdaptiveColumn' which will display as column in Portrait, and as Row in
        landscape mode -WIP

03-04-2024
Streak: 11
Learned:
    -Read about compose modifiers
Did:
    -Separate Main Menu Buttons into separate file, add background image to them
    -Try to make layout work and respect individual item weights, but it is very obviously
        broken in landscape with the current setup
    -Fix menu buttons not displaying how I want, though still need to swap between row/column
        based on device orientation

02-04-2024
Streak: 10
Learned:
Did:
    -Import image resources for main menu + buttons
    -Add background image to Main Menu - static for now

01-04-2024
Streak: 9
Learned:
Did:
    -Change default colours for light mode in theme

31-03-2024
Streak: 8
Learned:
Did:
    -Just get rid of some hardcoded strings

30-03-2024
Streak: 7
Learned:
Did:
    -Set up basic navigation from Main Menu to DayPart Menu, three buttons doing the same thing

29-03-2024
Streak: 6
Learned:
Did:
    -Start implementing Navigation Host
    -Add scaffolding (just files) for Main Menu screen, and reusable screen for Morning, Midday,
        Evening Menus called DayPart Menu
    -Set up minimal placeholder for MainMenu screen, mount it to main screen on start up
    -Add 'templateComponent' to organisation directory as a quick copy-paste blue print
        for future components

28-03-2024
Streak: 5